@@ -1,14 +1,18 @@
 package com.javfxtutorial.hethongdaugia.server.manager;
 
+import com.javfxtutorial.hethongdaugia.client.controller.ParticipatedAuctionController;
+import com.javfxtutorial.hethongdaugia.client.model.ClientModel;
 import com.javfxtutorial.hethongdaugia.common.model.Auction;
 import com.javfxtutorial.hethongdaugia.common.model.AutoBidConfig;
 import com.javfxtutorial.hethongdaugia.common.model.BidTransaction;
 import com.javfxtutorial.hethongdaugia.common.model.enums.AuctionStatus;
 import com.javfxtutorial.hethongdaugia.server.dao.AuctionDAO;
 import com.javfxtutorial.hethongdaugia.server.dao.BidDAO;
+import com.javfxtutorial.hethongdaugia.server.dao.ParticipatedAuctionDAO;
 import com.javfxtutorial.hethongdaugia.server.network.BidListener;
 import com.javfxtutorial.hethongdaugia.server.network.ClientHandler;
 
+import java.math.BigDecimal;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -18,21 +22,21 @@ import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 
-public class AuctionManger {
+public class AuctionManager {
     //Néue có người đắtj giá X s cuối thì ra hạn thêm Y
     private static final long ANTI_SNIPE_X_SECONDS = 60;
     private static final long ANTI_SNIPE_Y_SECONDS = 60;
 
     // ── Singleton thread-safe ─────────────────────────
-    private static volatile AuctionManger instance;
+    private static volatile AuctionManager instance;
 
-    private AuctionManger() {}
+    private AuctionManager() {}
 
-    public static AuctionManger getInstance() {
+    public static AuctionManager getInstance() {
         if (instance == null) {
-            synchronized (AuctionManger.class) {
+            synchronized (AuctionManager.class) {
                 if (instance == null) { // double-check
-                    instance = new AuctionManger();
+                    instance = new AuctionManager();
                 }
             }
         }
@@ -54,13 +58,27 @@ public class AuctionManger {
     // ─────────────────────────────────────────────────
     // SUBSCRIBE / UNSUBSCRIBE
     // ─────────────────────────────────────────────────
+//    public void registerToAuction(BidListener listener, int auctionId) {
+//        if (auctionSubscribers.containsKey(auctionId)) {
+//            auctionSubscribers.get(auctionId).add(listener);
+//        } else {
+//            auctionSubscribers.put(auctionId, new CopyOnWriteArrayList<>(List.of(listener)));
+//        }
+//        System.out.println("Đã thêm " + listener + "vào phòng auction có id: " +  auctionId);
+//    }
+
     public void registerToAuction(BidListener listener, int auctionId) {
-        if (auctionSubscribers.containsKey(auctionId)) {
-            auctionSubscribers.get(auctionId).add(listener);
-        } else {
-            auctionSubscribers.put(auctionId, new CopyOnWriteArrayList<>(List.of(listener)));
+        auctionSubscribers.computeIfAbsent(
+                auctionId,
+                k -> new CopyOnWriteArrayList<>()
+        );
+
+        List<BidListener> list = auctionSubscribers.get(auctionId);
+        if (!list.contains(listener)) {
+            list.add(listener);
         }
-        System.out.println("Đã thêm " + listener + "vào phòng auction có id: " +  auctionId);
+
+        System.out.println("Đã thêm " + listener + " vào phòng auction id: " + auctionId);
     }
 
     public void unregisterFromAuction(BidListener listener, int auctionId) {
@@ -114,6 +132,7 @@ public class AuctionManger {
         // 5. Lưu DB
         AuctionDAO.getInstance().update(auction);
         BidDAO.getInstance().insertBid(bid);
+        ParticipatedAuctionDAO.getInstance().insert(bid);
         System.out.println("Đã lưu vào database");
 
         // 6. Thông báo cho tất cả subscriber của auction này
@@ -140,8 +159,8 @@ public class AuctionManger {
     // ─────────────────────────────────────────────────
     // CHECK VALID BID
     // ─────────────────────────────────────────────────
-    public boolean checkValidBid(Auction auction, double amount) {
-        return amount >= auction.getCurrentPrice() + auction.getStepPrice();
+    public boolean checkValidBid(Auction auction, BigDecimal amount) {
+        return amount.compareTo(auction.getCurrentPrice().add(auction.getStepPrice())) >= 0;
     }
 
     // ─────────────────────────────────────────────────
@@ -168,6 +187,7 @@ public class AuctionManger {
     // AUTO BID — giữ nguyên logic của người khác viết
     // ─────────────────────────────────────────────────
     public synchronized boolean registerAutoBid(AutoBidConfig config) {
+        config.setRegisteredAt(LocalDateTime.now());
         List<AutoBidConfig> configs = autoBidRegistry.computeIfAbsent(
                 config.getAuctionId(),
                 k -> Collections.synchronizedList(new ArrayList<>())
@@ -201,34 +221,58 @@ public class AuctionManger {
                 .get(auction.getAuctionId());
         if (configs == null || configs.isEmpty()) return;
 
-        double step = auction.getStepPrice();
-        double minRequired = auction.getCurrentPrice() + step;
+        BigDecimal step = auction.getStepPrice(); // lấy giá step
+        BigDecimal minRequired = auction.getCurrentPrice().add(step);
 
         List<AutoBidConfig> eligibleBots = new ArrayList<>();
         for (AutoBidConfig c : configs) {
-            if (c.isActive() && c.getMaxPrice() >= minRequired) {
+            if (c.isActive() && c.getMaxPrice().compareTo(minRequired) >= 0) {
                 eligibleBots.add(c);
             }
         }
         if (eligibleBots.isEmpty()) return;
 
-        eligibleBots.sort((b1, b2) ->
-                Double.compare(b2.getMaxPrice(), b1.getMaxPrice()));
+        eligibleBots.sort((b1, b2) -> {
+            int cmp = b2.getMaxPrice().compareTo(b1.getMaxPrice());
+            if (cmp != 0) return cmp;
 
-        AutoBidConfig winnerBot = eligibleBots.get(0);
+            return b1.getRegisteredAt().compareTo(b2.getRegisteredAt());
+        });
+
+        AutoBidConfig winnerBot = eligibleBots.getFirst();
         if (winnerBot.getUserId() == auction.getWinnerId()) return;
 
-        double finalAmount;
+        // logic của autobid đây hehe
+//        Nếu max cao nhất > max cao thứ hai:
+//        giá thắng = min(max cao thứ hai + step, max cao nhất)
+//
+//        Nếu max cao nhất == max cao thứ hai:
+//        người đăng ký trước thắng
+//        giá thắng = maxBid đó
+
+        BigDecimal finalAmount;
+
         if (eligibleBots.size() == 1) {
             finalAmount = minRequired;
         } else {
-            double secondMax = eligibleBots.get(1).getMaxPrice();
-            finalAmount = secondMax + step;
-            if (finalAmount > winnerBot.getMaxPrice()) {
+            AutoBidConfig secondBot = eligibleBots.get(1);
+            BigDecimal secondMax = secondBot.getMaxPrice();
+
+            if (winnerBot.getMaxPrice().compareTo(secondMax) == 0) {
+                // Hai bot cùng maxBid: người đăng ký trước thắng ở đúng maxBid
                 finalAmount = winnerBot.getMaxPrice();
+            } else {
+                // Bot thắng chỉ cần hơn bot thứ hai một bước giá,
+                // nhưng không được vượt maxBid của chính nó
+                finalAmount = secondMax.add(step);
+
+                if (finalAmount.compareTo(winnerBot.getMaxPrice()) > 0) {
+                    finalAmount = winnerBot.getMaxPrice();
+                }
             }
-            if (finalAmount < minRequired) {
-                finalAmount = minRequired;
+
+            if (finalAmount.compareTo(minRequired) < 0) {
+                return;
             }
         }
 
@@ -241,6 +285,21 @@ public class AuctionManger {
 
         // Gọi lại placeBid — dùng sender = null vì là bot
         this.placeBid(autoBid, null);
+    }
+    public List<Auction> getParticipatedAuctionsByBidder(int userId){
+        ArrayList<Auction> auctionList = new ArrayList<>();
+        auctionList = (ArrayList<Auction>) ParticipatedAuctionDAO.getInstance().getParticipatedAuctionsByBidder(userId);
+        return auctionList;
+    }
+
+    public AuctionStatus checkPaymentStatus(Auction auction){
+        if (LocalDateTime.now().isAfter(auction.getEndingTime().plusHours(24))){
+            if (auction.getStatus() != AuctionStatus.PAID){
+                auction.setStatus(AuctionStatus.CANCELLED);
+                AuctionDAO.getInstance().update(auction);
+            }
+        }
+        return auction.getStatus();
     }
 
 
